force-app/main/default/objects/Customer_Portal_QPP__c/Customer_Portal_QPP__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>NVIDIA : Sales - Customer Portal</description>
    <label>Customer Portal : QPP</label>
</CustomObject>