force-app/main/default/objects/Customer_Portal_QPP__c/fields/Forgot_Password_MultiUser_Err_Msg__c.field-meta.xml
<CustomField>
    <fullName>Forgot_Password_MultiUser_Err_Msg__c</fullName>
    <defaultValue>&quot;Multiple users found. Please try with your username.&quot;</defaultValue>
    <label>Forgot_Password_MultiUser_Err_Msg</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>