force-app/main/default/objects/Customer_Portal_QPP__c/fields/Forgot_PWD_URL__c.field-meta.xml
<CustomField>
    <fullName>Forgot_PWD_URL__c</fullName>
    <label>Forgot PWD URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>