force-app/main/default/objects/Customer_Portal_QPP__c/fields/Forgot_Username_Customer_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Forgot_Username_Customer_Email_Template__c</fullName>
    <defaultValue>&quot;COMM_Forgot_Username_To_Customer_User&quot;</defaultValue>
    <label>Forgot_Username_Customer_Email_Template</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>