force-app/main/default/objects/Customer_Portal_QPP__c/fields/Forgot_Username_Email_PartnerAdmin__c.field-meta.xml
<CustomField>
    <fullName>Forgot_Username_Email_PartnerAdmin__c</fullName>
    <defaultValue>&quot;nvidiapartnerportal@nvidia.com&quot;</defaultValue>
    <label>Forgot_Username_Email_PartnerAdmin</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>