force-app/main/default/objects/Customer_Portal_QPP__c/fields/Forgot_Username_SingleUser_Err_Msg__c.field-meta.xml
<CustomField>
    <fullName>Forgot_Username_SingleUser_Err_Msg__c</fullName>
    <defaultValue>&quot;An email with your Username has been sent to your email address.&quot;</defaultValue>
    <label>Forgot_Username_SingleUser_Err_Msg</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>