force-app/main/default/objects/Customer_Portal_QPP__c/fields/Forgot_UserName_URL__c.field-meta.xml
<CustomField>
    <fullName>Forgot_UserName_URL__c</fullName>
    <defaultValue>&quot;http://nvidia.force.com/qpp/apex/COMM_ForgotUsername&quot;</defaultValue>
    <label>Forgot UserName URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>