force-app/main/default/objects/Customer_Portal_QPP__c/fields/Login_Err_Msg__c.field-meta.xml
<CustomField>
    <fullName>Login_Err_Msg__c</fullName>
    <label>Login_Err_Msg</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>